# gannon

./: .dockerignore  .eslintrc.json  .gitignore  Cargo.toml  Dockerfile  README.md  app.config.ts  app.vue  fly.toml  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  uno.config.ts
.github/workflows/: azure-static-web-apps-white-ground-0d7d34503.yml  azure.yml  rust.yaml  vercel.yml
components/: SponsorModal.vue  ThemeToggle.vue
components/Button/: Bar.vue
components/Carousel/: index.vue
components/ColorMode/: IconDark.vue  IconLight.vue  IconSepia.vue  IconSystem.vue  Toggle.vue
pages/: index.vue
src/: App.vue  app.rs  calendar.rs  calendar.scss  contact.rs  hire.rs  lib.rs  main.rs  main.scss  routes.rs  sponsor_modal.rs  sponsor_modal.scss  style.css
src-old/: main.rs
src/components/: contact.rs  mod.rs
src/routes/: books.rs  calendar.rs  fourzerofour.rs  login.rs  mod.rs
static/css/: main.css
style/: main.scss
templates/: index.html
